[gd_scene load_steps=6 format=3 uid="uid://bvspqhbpgs3bq"]

[ext_resource type="Script" uid="uid://bfqigkjr1lvrs" path="res://door/door.gd" id="1_rdd60"]
[ext_resource type="Texture2D" uid="uid://gjgfjnuuki6x" path="res://tilemap_packed.png" id="2_08xnr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1xxlg"]
atlas = ExtResource("2_08xnr")
region = Rect2(104, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_42tme"]
atlas = ExtResource("2_08xnr")
region = Rect2(88, 48, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xshfr"]
size = Vector2(8, 8)

[node name="Door" type="Node2D"]
script = ExtResource("1_rdd60")

[node name="SpriteOpen" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("AtlasTexture_1xxlg")

[node name="SpriteClosed" type="Sprite2D" parent="."]
visible = false
texture = SubResource("AtlasTexture_42tme")

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_xshfr")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
